# circlecigen

./: .codeclimate.yaml  .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Pipfile  README.md  notes.txt  op.env  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml  generated_config.yml  post-approve.yml  pre-approve.yml
circle/: config.yml  post-approve.yml  pre-approve.yml  template.json
env_test/: config.yml  custom.yml  default.json  dev.json  generated_config.yml  muilti.bak  multi.json  nonprod.json  post-approve.yml  pre-approve.yml  preview-us-east-2.tfvars.json  preview-us-west-2.tfvars.json  prod.json  qa-us-east-2.tfvars.json  qa-us-west-2.tfvars.json  qa.tfvars.json  template_generated_config.yml
env_test_role/: config.yml  post-approve.yml  pre-approve.yml  role_generated_config.yml  versions.json
environments_hold/: default.json  multi.json  nonprod-eu-central-1.tfvars.json  nonprod-eu-west-1.tfvars.json  nonprod-us-east-2.tfvars.json  nonprod-us-west-2.tfvars.json  preview-eu-central-1.tfvars.json  preview-eu-west-1.tfvars.json  preview-us-east-2.tfvars.json  preview-us-west-2.tfvars.json  preview.tfvars.json  qa-us-east-2.tfvars.json  qa-us-west-2.tfvars.json  temp.json
src/: circlecigen.py  template.py  tfvars.py  utils.py
test/: generated_config.yml  generated_config_setup.yml  nonprod-us-east-2.tfvars.json  nonprod-us-west-2.tfvars.json  prod-us-east-2.tfvars.json  prod-us-west-2.tfvars.json  template_generated_config.yml  test_circlecigen.py  test_template.py  test_tfvars.py  test_utils.py
